--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jordan</title>
+    <title>Jordan Repoli</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Arizonia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-        body {
-            background-image: url("/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/whitebrick.jpg");
-        }
-    </style>
+   
 
 </head>
 
@@ -22,7 +18,7 @@
     <h1>Jordan Repoli</h1>
     <span class="firstdiv">
         <a href="https://www.imdb.com/name/nm8773543/?ref_=fn_al_nm_2">
-        <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/imdb.png"></a>
+        <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/imdb.png">test</a>
         <a href="https://www.instagram.com/jordie_ar/">
         <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/instragram.png"></a>
         </span>
@@ -55,6 +51,11 @@
         <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/side.jpg" alt="My test image">
         <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/green2.jpg" alt="My test image">
     </div>
+
+    <div class="containertwo">
+        <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/imdb.png">
+        <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/instragram.png">
+    </div>
     
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -69,7 +70,7 @@
         </div>
     </div>
     <footer>footer</footer>
-    <a href="default.asp">
+    <a href="#"">
         <img
             src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjVkYDk26DoAhV8mnIEHaCZA6QQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F548946642051893962%2F&psig=AOvVaw15xjtt92f1RutR4gP3V-HC&ust=1584507291890383">
     </a>
