--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+        <img src="/Users/mark/Desktop/Web_Dev_2020/jordan_site/images/headshot.jpg" alt="My test image">
+        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Resume</a>
@@ -59,7 +60,7 @@
     
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">About Me</h1>
+            <h2 class="display-4">About Me</h2>
             <p class="lead"><br> I am a nineteen-year-old actress who has been honing my skills since age nine when I was
                 cast in my school’s production of Aladdin, my favorite Disney movie. As a young actress, I've been
                 trained in film-acting by Cheryl Felicia Rhoads and the New York Film Academy. I also have experience
